# apps/api/handlers/simulate.go
@@ -11,8 +11,12 @@ import (
 	"github.com/DomNidy/saint_sim/pkg/go-shared/db"
 	"github.com/DomNidy/saint_sim/pkg/go-shared/utils"
 	"github.com/gin-gonic/gin"
-	"github.com/jackc/pgx/v5/pgtype"
 )
+
+type wowCharacterValidationFailure struct {
+	statusCode int
+	response   gin.H
+}
 
 func Simulate(c *gin.Context, dbClient *db.Queries, simQueue *utils.SimulationQueueClient) {
 	var simOptions api_types.SimulationOptions
@@ -23,74 +27,48 @@ func Simulate(c *gin.Context, dbClient *db.Queries, simQueue *utils.SimulationQu
 
 	// Validate sim options to prevent rce
 	if !utils.IsValidSimOptions(&simOptions) {
-		log.Printf("Sim options were invalid!")
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Bad request"})
 		return
 	}
 
-	// Marshal back
-	receivedJson, err := json.Marshal(simOptions)
-	if err != nil {
-		log.Printf("Error converting to json: %v, %v", receivedJson, err)
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal server error"})
-		return
-	}
-
-	// Make sure the provided realm & regions exist
-	if !utils.IsValidWowRealm(string(simOptions.WowCharacter.Realm)) {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid wow realm"})
-		return
-	}
-
-	if !utils.IsValidWowRegion(string(simOptions.WowCharacter.Region)) {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid wow region"})
-		return
-	}
-
-	// Make sure the wow character actually exists before sending sim msg
-	exists, err := api_utils.CheckWowCharacterExists(&simOptions.WowCharacter)
-	if err != nil {
+	if validationFailure, err := validateWowCharacter(simOptions.WowCharacter); err != nil {
 		log.Printf("Error checking for character existence: %v", err)
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal server error"})
 		return
-	} else if !exists {
-		log.Printf("WoW character does not exist")
-		c.JSON(http.StatusNotFound, gin.H{"message": "WoW character does not exist"})
+	} else if validationFailure != nil {
+		c.JSON(validationFailure.statusCode, validationFailure.response)
 		return
 	}
 
-	// Create SimulationMessageBody
-	simulationRequestId := api_utils.GenerateUUID()
-	simulationMessageBody := api_types.SimulationMessageBody{
-		SimulationId: &simulationRequestId,
-	}
-	simulationMessageBodyJson, err := json.Marshal(simulationMessageBody)
+	simOptionsJSON, err := json.Marshal(simOptions)
 	if err != nil {
-		log.Printf("Error converting to json: %v, %v", receivedJson, err)
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal server error"})
 		return
 	}
 
-	log.Printf("Got simulation request options: %s", string(receivedJson))
-	log.Printf("Marshalled SimulationMessageBody into JSON object: %s", string(simulationMessageBodyJson))
-
-	var simulationRequestUUID pgtype.UUID
-	if err := simulationRequestUUID.Scan(simulationRequestId); err != nil {
-		log.Printf("Error converting simulation request id to uuid: %v", err)
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal server error"})
-		return
-	}
-
-	simRequestParams := db.CreateSimulationRequestParams{
-		ID:      simulationRequestUUID,
-		Options: receivedJson,
-	}
-	// Create the simulation_request entry in the DB
-	// TODO: We can add request origin information here so we can later determine if we should trigger the discord notification postgres channel
-	// TODO: We will need to update the 'notify_simulation_data' trigger in the db to check for this info.
-	err = dbClient.CreateSimulationRequest(context.Background(), simRequestParams)
+	// Create the simulation entry in the DB
+	simEntry, err := dbClient.CreateSimulation(context.Background(), simOptionsJSON)
 	if err != nil {
 		log.Printf("%v", err)
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal server error"})
+		return
+	}
+
+	idValue, err := simEntry.ID.Value()
+	if err != nil {
+		log.Printf("Error converting simulation id to string: %v", err)
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal server error"})
+		return
+	}
+	simulationID, ok := idValue.(string)
+	if !ok {
+		log.Printf("Unexpected simulation id type: %T", idValue)
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal server error"})
+		return
+	}
+
+	simulationMessageBody := utils.SimulationMessage{
+		SimulationID: simulationID,
 	}
 
 	err = simQueue.Publish(simulationMessageBody)
@@ -102,8 +80,40 @@ func Simulate(c *gin.Context, dbClient *db.Queries, simQueue *utils.SimulationQu
 		return
 	}
 
-	log.Printf(" [x] Sent %s\n", simulationMessageBody)
-	c.JSON(200, api_types.SimulationResponse{
-		SimulationRequestId: utils.StrPtr(string(simulationRequestId[:])),
+	log.Printf(" [x] Sent %v\n", simulationMessageBody)
+	c.JSON(200, api_types.Simulation{
+		Id:     &simulationMessageBody.SimulationID,
+		Status: (*api_types.SimulationStatus)(utils.StrPtr("in_queue")),
 	})
+
+}
+
+func validateWowCharacter(character api_types.WowCharacter) (*wowCharacterValidationFailure, error) {
+	if !utils.IsValidWowRealm(string(character.Realm)) {
+		return &wowCharacterValidationFailure{
+			statusCode: http.StatusBadRequest,
+			response:   gin.H{"error": "Invalid wow realm"},
+		}, nil
+	}
+
+	if !utils.IsValidWowRegion(string(character.Region)) {
+		return &wowCharacterValidationFailure{
+			statusCode: http.StatusBadRequest,
+			response:   gin.H{"error": "Invalid wow region"},
+		}, nil
+	}
+
+	exists, err := api_utils.CheckWowCharacterExists(&character)
+	if err != nil {
+		return nil, err
+	}
+	if !exists {
+		log.Printf("WoW character does not exist")
+		return &wowCharacterValidationFailure{
+			statusCode: http.StatusNotFound,
+			response:   gin.H{"message": "WoW character does not exist"},
+		}, nil
+	}
+
+	return nil, nil
 }
