# apps/api/openapi.yaml
@@ -7,7 +7,29 @@ info:
     This API responsible for the saint business logic. The discord bot, and, potentially more services in the future, will call this API.
 
 paths:
-  /simulate:
+  /simulation/{id}:
+    get:
+      description: View the result of a simulation.
+      parameters:
+        - name: id
+          in: path
+          description: The ID of the simulation to query
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: The simulation result, or, if the simulation is currently in progress, the current state of the simulation job.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/simulation"
+        "404":
+          $ref: "#/components/responses/not_found_error"
+        "500":
+          $ref: "#/components/responses/internal_error"
+  /simulation:
     post:
       operationId: simulate
       description: Request a simulation, powered by SimC.
@@ -19,23 +41,18 @@ paths:
             schema:
               $ref: "#/components/schemas/simulation_options"
       security:
-        - SaintBotAuth: []
-        - UserAuth: []
-      # https://swagger.io/docs/specification/v3_0/describing-parameters/
-      parameters:
-        - name: Discord-User-Id
-          in: header
-          required: false
-          schema:
-            type: string
-          description: This header MUST be present for requests originating from the Saint Discord bot. Not required when requested directly from a user.
+        - JWTAuth: []
       responses:
-        "200":
-          description: Simulation request was received
+        "202":
+          description: Simulation request was accepted
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/simulation_response"
+                type: object
+                properties:
+                  simulation_id:
+                    type: string
+                    description: ID of the simulation that was created
         "400":
           description: When one or more of the simulation options were invalid. For example, passing an invalid region or realm for the wow character may cause this.
           content:
@@ -46,54 +63,6 @@ paths:
           $ref: "#/components/responses/not_found_error"
         "500":
           $ref: "#/components/responses/internal_error"
-  /report/{id}:
-    get:
-      description: View the results of a simulation operation
-      parameters:
-        - in: path
-          required: true
-          name: id
-          description: The simulation id we want to get data for. (This is different from the simulation request id)
-          schema:
-            type: integer
-      responses:
-        "200":
-          description: Results of the simulation operation with the provided id
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/simulation_data"
-        "404":
-          $ref: "#/components/responses/not_found_error"
-        "500":
-          $ref: "#/components/responses/internal_error"
-  /report/request/{requestId}:
-    get:
-      description: View the results of a simulation operation by request id
-      parameters:
-        - in: path
-          required: true
-          name: requestId
-          description: The simulation request id returned from POST /simulate
-          schema:
-            type: string
-            format: uuid
-      responses:
-        "200":
-          description: Results of the simulation operation with the provided request id
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/simulation_data"
-        "202":
-          description: Simulation request exists but the worker has not published the result yet.
-        "400":
-          $ref: "#/components/responses/bad_request_error"
-        "404":
-          $ref: "#/components/responses/not_found_error"
-        "500":
-          $ref: "#/components/responses/internal_error"
-
 components:
   responses:
     bad_request_error:
@@ -115,16 +84,7 @@ components:
           schema:
             $ref: "#/components/schemas/error_response"
   securitySchemes:
-    SaintBotAuth:
-      description: |
-        Schema that the Saint Discord bot uses to authenticate with our API
-        Use the `Authorization: Bot <bot_jwt_token>` header to authenticate
-        Note: Certain endpoints may require a Discord-User-Id header to be provided
-        when using this authentication scheme.
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
-    UserAuth:
+    JWTAuth:
       description: |
         Schema that any frontend client uses to authenticate with our API
         Use the `Authorization: Bearer <user_jwt_token>` header to authenticate
@@ -175,40 +135,25 @@ components:
         wow_character:
           $ref: "#/components/schemas/wow_character"
 
-    simulation_response:
+    simulation:
       type: object
-      description: Object containing information about a simulation operation, returned from api
-      properties:
-        simulation_request_id:
-          type: string
-          description: Used to identify a simulation request in postgres
-
-    simulation_data:
-      type: object
-      description: The output of a simulation.
+      description: All details & data about a simulation.
       properties:
         id:
-          type: integer
-          description: ID of this simulation
-          example: 42
-        request_id:
           type: string
-          description: The ID of the simulation request that initated this simulation
+          description: ID for the simulation operation
           example: "41e9a22f-d2c1-48b2-b234-15db461049d4"
-        sim_result:
+        status:
           type: string
-          description: The actual data produced from the simulation operation
+          enum:
+            - "in_progress" # currently being performed
+            - "in_queue" # waiting to be picked up and in queue
+            - "error" # failed
+            - "complete"
+        content:
+          type: string
+          description: The output / result of the simulation operation
           example: "..."
-
-    simulation_message_body:
-      type: object
-      description:
-        This JSON object is included in a rabbitmq message, then that message gets published to the simulation_queue.
-        Consumers of the simulation queue (simulation_worker) will use this JSON object to carry out the simulation.
-      properties:
-        simulation_id:
-          type: string
-          description: Used to identify a simulation request in postgres
 
     error_response:
       type: object
